Add getting logs by label